# interp1d

./: CHANGELOG.md  Cargo.toml  README.md
benches/: interpolation.rs
examples/: integer.rs  parallel.rs  simple.rs
src/: error.rs  lib.rs  pair.rs
tests/: complex.rs  integer.rs  parallel.rs  simple.rs
