[package]
name = "interp1d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
thiserror = "1.0.31"

[dev-dependencies]
criterion = "0.3.6"
rand = "0.8.5"
rayon = "1.5.3"

[[bench]]
name = "interpolation"
harness = false
