[package]
name = "interp1d"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repo = "https://github.com/cavemanloverboy/interp1d"
description = "A simple, lightweight interpolation library written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conv = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.31"

[dev-dependencies]
criterion = "0.3.6"
num-complex = "0.4.2"
rand = "0.8.5"
rayon = "1.5.3"

[[bench]]
name = "interpolation"
harness = false
